# turing-dmf

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
mathrace_compatibility/: pyproject.toml
mathrace_compatibility/data/2014/: kangourou.journal
mathrace_compatibility/data/2015/: disfida.score  kangourou.journal
mathrace_compatibility/data/2016/: disfida.score  kangourou.journal
mathrace_compatibility/data/2018/: disfida.score
mathrace_compatibility/data/2019/: cesenatico_finale_femminile_formato_journal.journal  cesenatico_finale_formato_extracted_nomi_squadra.journal  cesenatico_semifinale_C.journal
mathrace_compatibility/data/2020/: cesenatico_finale_femminile.journal  cesenatico_semifinale_A.journal  disfida.score
mathrace_compatibility/data/2021/: cesenatico_finale_femminile.journal  cesenatico_semifinale_A.journal  cesenatico_semifinale_B.journal  cesenatico_semifinale_D.journal
mathrace_compatibility/data/2022/: cesenatico_semifinale_D.journal  qualificazione_brindisi_catania_forli_cesena_sassari.journal  qualificazione_femminile_1.journal  qualificazione_firenze.journal  qualificazione_genova.journal  qualificazione_pordenone_udine.journal  qualificazione_reggio_emilia.journal  qualificazione_roma.journal  qualificazione_velletri.journal
mathrace_compatibility/data/2023/: disfida_new_format.journal  disfida_new_format.score  qualificazione_femminile_1.journal
mathrace_compatibility/mathrace_compatibility/: __init__.py  determine_journal_version.py
mathrace_compatibility/scripts/: mathrace_log_to_turing_json.py
mathrace_compatibility/tests/data/: .gitignore  journal_2012.expected.score  journal_2013.expected.score  journal_2014.expected.score  journal_2015.actual.score  journal_2015.expected.score  journal_2016.actual.score  journal_2017.actual.score  journal_2017.expected.score  journal_2018.actual.score  journal_2018.expected.score  journal_2019.expected.score  journal_2022.actual.score  journal_2023.actual.score  journal_2023.expected.score
mathrace_compatibility/tests/unit/: conftest.py  test_determine_journal_version.py
mathrace_interaction/: README.md  pyproject.toml
mathrace_interaction/data/: fix_phiquadro_journals.sh
mathrace_interaction/data/2014/: kangourou.score
mathrace_interaction/data/2015/: disfida.score  kangourou.score
mathrace_interaction/data/2016/: kangourou.score
mathrace_interaction/data/2017/: disfida.score
mathrace_interaction/data/2018/: disfida.score
mathrace_interaction/data/2019/: cesenatico_finale_femminile_formato_extracted.journal  cesenatico_finale_formato_extracted.journal  cesenatico_finale_formato_journal.journal  cesenatico_semifinale_A.journal  cesenatico_semifinale_B.journal  cesenatico_semifinale_B.score  cesenatico_semifinale_D.journal
mathrace_interaction/data/2020/: cesenatico_finale.journal  cesenatico_semifinale_B.journal  cesenatico_semifinale_C.journal  cesenatico_semifinale_D.journal  torino_pubblico.json
mathrace_interaction/data/2021/: cesenatico_finale.journal  cesenatico_semifinale_C.journal  cesenatico_semifinale_E.journal  cesenatico_semifinale_F.journal  torino_pubblico.json
mathrace_interaction/data/2022/: cesenatico_finale.journal  cesenatico_finale_femminile.journal  cesenatico_pubblico.journal  cesenatico_pubblico.json  cesenatico_pubblico.score  cesenatico_semifinale_A.journal  cesenatico_semifinale_B.journal  cesenatico_semifinale_C.journal  qualificazione_arezzo_cagliari_taranto_trento.journal  qualificazione_campobasso_collevaldelsa_pisa_napoli.journal  qualificazione_femminile_2.journal  qualificazione_femminile_3.journal  qualificazione_foggia_lucca_nuoro_tricase.journal  qualificazione_milano.journal  qualificazione_narni.journal  qualificazione_parma.journal  qualificazione_torino.journal  qualificazione_trieste.journal  qualificazione_vicenza.journal  torino_pubblico.json
mathrace_interaction/data/2023/: cesenatico_pubblico.json  disfida_legacy_format.score  disfida_new_format.score  qualificazione_femminile_2.journal  qualificazione_femminile_3.journal  torino.json  torino_pubblico_distanza.json  torino_pubblico_presenza.json
mathrace_interaction/data/2024/: DMFsfida.json  cesenatico_pubblico.json  smartematica.json  torino.json  torino_medie.json  torino_pubblico.json
mathrace_interaction/data/2025/: DreaMsfida.json  (+2 more)
mathrace_interaction/docs/: api.rst  conf.py
mathrace_interaction/mathrace_interaction/: __init__.py  determine_journal_version.py  journal_reader.py  journal_version_converter.py  journal_writer.py  list_journal_versions.py  live_journal_to_live_turing.py  live_turing_to_html.py  live_turing_to_live_journal.py  strip_comments_and_unhandled_events_from_journal.py  strip_mathrace_only_attributes_from_imported_turing.py
mathrace_interaction/tests/: README.md
(+261 files in other folders)
